recursion.cons.butlast.ButLast.scala.error
Erreur de compilation :
ButLast:4: error: value teil is not a member of List[Int]
  if(l.teil == Nil)
       ^ButLast:4: error: type mismatch;
 found   : Unit
 required: List[Int]
  if(l.teil == Nil)
  ^